--- a/package.xml
+++ b/package.xml
@@ -12,6 +12,7 @@
   <depend>ompl</depend>
   <depend>nav_msgs</depend>
   <depend>ackermann_msgs</depend>
+  <depend>opencv</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
